[gd_scene load_steps=4 format=3 uid="uid://cqh7q56yahlv3"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_k6eap"]
[ext_resource type="Theme" uid="uid://bhd8xgwk0olmx" path="res://resources/label_theme.tres" id="4_euh7q"]
[ext_resource type="PackedScene" uid="uid://vgrl5iphvgy6" path="res://scenes/ui/animated_button.tscn" id="5_w2jpk"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_k6eap")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_euh7q")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 6

[node name="ContinueButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_w2jpk")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "CONTINUE"

[node name="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_w2jpk")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "OPTION"

[node name="ExitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_w2jpk")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "EXIT TO MENU"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_pressed"]
